# metamask_selenium_connect_dapp

./: .gitignore  README.md  main.py  poetry.toml  pyproject.toml  requirements.txt
metamask_selenium_connect_dapp/BitBrowser/: bitbrowser.py
metamask_selenium_connect_dapp/DAPP/: dapp.py  dapp_socialsummer.py
metamask_selenium_connect_dapp/MetaMask/: metamask_setup.py
metamask_selenium_connectdapp/BitBrowser/: bitbrowser.py
metamask_selenium_connectdapp/DAPP/: dapp.py
metamask_selenium_connectdapp/MetaMask/: metamasksetup.py
tests/: test.py
